--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,7 +533,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/favicon.png") center center no-repeat;
+  background: url("../img/background.jpg") center center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
