--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -515,7 +515,7 @@ section {
   margin: 0 0 0 50px;
   font-family: "Playfair Display", serif;
   font-size: 20px;
-  color: #000000;
+  color: #1B4242;
 }
 
 .about .content .count-box a {
