--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,11 +341,11 @@ h6 {
   font-size: 36px;
   font-weight: 700;
   line-height: 56px;
-  color: #fff;
+  color: #092635;
 }
 
 #hero h2 {
-  color: #eee;
+  color: #092635;
   margin-bottom: 10px;
   font-size: 24px;
   font-weight: 300;
